--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
 </head>
 
 
-<body class="bodyy">
+<body class="bbody">
 
          <header>
                   
                   <nav>
-                         <a class="logoone link" href="./index.html">
-                              Web <span class="logotwo">Studio
+                         <a class="logoo link" href="./index.html">
+                              Web <span class="logoo">Studio
                               </span>    
                          </a>
                            <ul class="list">
                                     <li>
-                                             <a class="but link"  href="./index.html">
+                                             <a class="butt link"  href="./index.html">
                                                   Studio    
                                              </a>
                                     </li>
                                     <li>
-                                             <a class="but link" href="./portfolio.html">
+                                             <a class="butt link" href="./portfolio.html">
                                                       Portfolio
                                              </a>
                                     </li>
                                     <li>
-                                             <a class="but link" href="">
+                                             <a class="butt link" href="">
                                                       Contacts
                                              </a>
                                     </li>
@@ -64,12 +64,12 @@
 
          <main>
                <!-- Hero -->
-               <section class="secone">
-                         <h1 class="hsecone">
+               <section class="sectione">
+                         <h1 class="hsectione">
                               Effective Solutions
                               for Your Business
                          </h1>
-                         <button class="butone" type="button">
+                         <button class="butt" type="button">
                          Order Service
                          </button>
 
@@ -92,7 +92,7 @@
                               <h3 class="htwosectwo">
                                    Punctuality
                               </h3>
-                              <p class="psectwo">
+                              <p class="sectwoo">
                                    Bring the key message to the brand's audience for the best 
                                    price within the shortest possible time.
                               </p>
@@ -101,7 +101,7 @@
                               <h3 class="htwosectwo">
                                    Diligence
                               </h3>
-                              <p class="psectwo">
+                              <p class="sectwoo">
                                    Research and confirm brands that present the strongest 
                                    digital growth opportunities and minimize risk.
                               </p>
@@ -110,7 +110,7 @@
                               <h3 class="htwosectwo">
                                    Technologies
                               </h3>
-                              <p class="psectwo">
+                              <p class="sectwoo">
                                    Design practice focused on digital experiences.
                                    We bring forth a deep passion for problem-solving.
                               </p>
@@ -118,7 +118,7 @@
                     </ul>
                </section>
                     <!-- What are we doing -->
-               <section class="secthree">
+               <section class="sectionthree">
                     <h2 class="htwosecthree">
                          What are we doing
                     </h2>
@@ -142,7 +142,7 @@
                     </ul>
                </section>
                <!-- Our Team -->
-               <section class="secfour">
+               <section class="sectionfour">
                     <h2 class="htwosecfour">
                          Our Team
                     </h2>
