--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
          <meta charset="UTF-8">
          <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,15 +17,16 @@
          <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
 </head>
 
-<body class="bodyyy">
+
+<body class="bbody">
 
          <header>
 
                   <nav>
-                           <a class="logoone link" href="./index.html">
+                           <a class="logoo link" href="./index.html">
                                     Web <span class="logotwo"></span>Studio</span></a>
                            </a>
-                           <ul class="list">
+                           <ul class="lisst">
                                     <li>
                                              <a class="but link"   href="./index.html">
                                                       Studio
@@ -43,7 +45,7 @@
                            </ul>
                   </nav>
 
-                  <address class="add">
+                  <address class="addres">
                            <ul class="list">
                                     <li>
                                              <a class="addone link" href="mailto:info@devstudio.com">
@@ -58,33 +60,35 @@
                            </ul>
                   </address>
          </header>
+
+
 <main>
          <!-- Hero -->
          <section>
                   <h1>
                            <ul>
                                     <li>
-                                    <button  class="butall" type="button">
+                                    <button  class="but" type="button">
                                              All
                                     </button>
                                     </li> 
                                     <li>
-                                    <button  class="butall" type="button">
+                                    <button  class="but" type="button">
                                              Web Site
                                     </button>
                                     </li>
                                     <li>
-                                    <button  class="butall" type="button">
+                                    <button  class="but" type="button">
                                              App
                                     </button>
                                     </li>
                                     <li>
-                                    <button  class="butall" type="button">
+                                    <button  class="but" type="button">
                                              Design
                                     </button>
                                     </li>
                                     <li>
-                                    <button  class="butall" type="button">
+                                    <button  class="but" type="button">
                                              Marketing
                                     </button>
                                     </li>
@@ -200,6 +204,8 @@
                   </ul>
                   
 </main>
+
+
 
 <!-- PFooter -->
 <footer class="footer">
