--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                   
                   <nav>
                          <a class="logoo link" href="./index.html">
-                              Web <span class="logoo">Studio
+                              Web <span class="logotwo">Studio
                               </span>    
                          </a>
                            <ul class="list">
                                     <li>
-                                             <a class="butt link"  href="./index.html">
+                                             <a class="but link"  href="./index.html">
                                                   Studio    
                                              </a>
                                     </li>
                                     <li>
-                                             <a class="butt link" href="./portfolio.html">
+                                             <a class="but link" href="./portfolio.html">
                                                       Portfolio
                                              </a>
                                     </li>
                                     <li>
-                                             <a class="butt link" href="">
+                                             <a class="but link" href="">
                                                       Contacts
                                              </a>
                                     </li>
@@ -69,21 +69,21 @@
                               Effective Solutions
                               for Your Business
                          </h1>
-                         <button class="butt" type="button">
+                         <button class="but" type="button">
                          Order Service
                          </button>
 
                
                </section>
                <!-- Benefits -->   
-               <section class="sectwo">
+               <section class="sectw">
                          <h2 hidden class="delete">Benefits</h2>
                     <ul class="list">
                          <li>
                               <h3 class="htwosectwo>
                                    Strategy
                               </h3>
-                              <p class="psectwo">
+                              <p class="sectwoo">
                                    Our goal is to identify the business
                                    problem to walk away with the perfect and creative solution.
                               </p>
@@ -156,7 +156,7 @@
                                    <h3  class="hthreesecfour">
                                         Mark Guerrero
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="endsecfour">
                                         Product Designer
                                    </p>
                          </li>
@@ -167,7 +167,7 @@
                                    <h3  class="hthreesecfour">
                                         Tom Ford
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="endsecfour">
                                         Frontend Developer
                                    </p>
                          </li>
@@ -178,7 +178,7 @@
                                    <h3  class="hthreesecfour">
                                         Camila Garcia
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="endsecfour">
                                         Marketing
                                    </p>
                          </li>
@@ -189,7 +189,7 @@
                                    <h3>
                                         Daniel Wilson
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="endsecfour">
                                         UI Designer
                                    </p>
                          </li>
@@ -200,10 +200,10 @@
 
    /--!Footer --/
 <footer class="footer">
-          <a class="footerlogoone link" href="./index.html">
+          <a class="footerlogoo link" href="./index.html">
                Web <span class="footerlogotwo">Studio </span>
           </a>
-          <p class="pfooter">
+          <p class="footer">
                Increase the flow of customers and sales for your 
                business with digital marketing & growth solutions.
           </p>
