--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                   </nav>
 
                   <address class="addres">
-                           <ul class="list">
+                           <ul class="lisst">
                                     <li>
                                              <a class="addone link" href="mailto:info@devstudio.com">
                                                       info@devstudio.com
@@ -100,7 +100,7 @@
          <!-- Servises -->
          <section>
                   
-                  <ul class="list">
+                  <ul class="lisst">
                   
                   <li>
                            <a class="link" href=""></a>
@@ -207,12 +207,12 @@
 
 
 
-<!-- PFooter -->
+<!-- Footer -->
 <footer class="footer">
-         <a class="footerlogoone link" href="./index.html">
+         <a class="footerlogoo link" href="./index.html">
                   Web<span class="footerlogotwo"> Studio</span>
          </a>
-         <p class="pfooter">
+         <p class="footer">
                   Increase the flow of customers and sales for your
                   business with digital marketing & growth solutions.
          </p>
