--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
                   </nav>
 
                   <address class="addres">
-                           <ul class="lisst">
+                           <ul class="list">
                                     <li>
                                              <a class="addone link" href="mailto:info@devstudio.com">
                                                       info@devstudio.com
