--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </head>
 
 
-<body class="bbody">
+<body class="bodyy">
 
          <header>
                   
                   <nav>
-                         <a class="logoo link" href="./index.html">
+                         <a class="logoone link" href="./index.html">
                               Web <span class="logotwo">Studio
                               </span>    
                          </a>
@@ -45,8 +45,8 @@
                                     </li>
                            </ul>
                   </nav>
-                  <address>
-                         <ul>
+                  <address class="add">
+                         <ul class="list">
                                    <li>
                                              <a class="addone link" href="mailto:info@devstudio.com">
                                                        info@devstudio.com
@@ -64,12 +64,12 @@
 
          <main>
                <!-- Hero -->
-               <section class="sectione">
-                         <h1 class="hsectione">
+               <section class="secone">
+                         <h1 class="hsecone">
                               Effective Solutions
                               for Your Business
                          </h1>
-                         <button class="but" type="button">
+                         <button class="butone" type="button">
                          Order Service
                          </button>
 
@@ -83,7 +83,7 @@
                               <h3 class="htwosectwo>
                                    Strategy
                               </h3>
-                              <p class="sectwoo">
+                              <p class="psectwo">
                                    Our goal is to identify the business
                                    problem to walk away with the perfect and creative solution.
                               </p>
@@ -92,7 +92,7 @@
                               <h3 class="htwosectwo">
                                    Punctuality
                               </h3>
-                              <p class="sectwoo">
+                              <p class="psectwo">
                                    Bring the key message to the brand's audience for the best 
                                    price within the shortest possible time.
                               </p>
@@ -101,7 +101,7 @@
                               <h3 class="htwosectwo">
                                    Diligence
                               </h3>
-                              <p class="sectwoo">
+                              <p class="psectwo">
                                    Research and confirm brands that present the strongest 
                                    digital growth opportunities and minimize risk.
                               </p>
@@ -110,7 +110,7 @@
                               <h3 class="htwosectwo">
                                    Technologies
                               </h3>
-                              <p class="sectwoo">
+                              <p class="psectwoo">
                                    Design practice focused on digital experiences.
                                    We bring forth a deep passion for problem-solving.
                               </p>
@@ -118,7 +118,7 @@
                     </ul>
                </section>
                     <!-- What are we doing -->
-               <section class="sectionthree">
+               <section class="secthree">
                     <h2 class="htwosecthree">
                          What are we doing
                     </h2>
@@ -142,7 +142,7 @@
                     </ul>
                </section>
                <!-- Our Team -->
-               <section class="sectionfour">
+               <section class="secfour">
                     <h2 class="htwosecfour">
                          Our Team
                     </h2>
@@ -156,7 +156,7 @@
                                    <h3  class="hthreesecfour">
                                         Mark Guerrero
                                    </h3>
-                                   <p class="endsecfour">
+                                   <p class="psecfour">
                                         Product Designer
                                    </p>
                          </li>
@@ -167,7 +167,7 @@
                                    <h3  class="hthreesecfour">
                                         Tom Ford
                                    </h3>
-                                   <p class="endsecfour">
+                                   <p class="psecfour">
                                         Frontend Developer
                                    </p>
                          </li>
@@ -178,7 +178,7 @@
                                    <h3  class="hthreesecfour">
                                         Camila Garcia
                                    </h3>
-                                   <p class="endsecfour">
+                                   <p class="psecfour">
                                         Marketing
                                    </p>
                          </li>
@@ -189,7 +189,7 @@
                                    <h3>
                                         Daniel Wilson
                                    </h3>
-                                   <p class="endsecfour">
+                                   <p class="psecfour">
                                         UI Designer
                                    </p>
                          </li>
@@ -203,7 +203,7 @@
           <a class="footerlogoo link" href="./index.html">
                Web <span class="footerlogotwo">Studio </span>
           </a>
-          <p class="footer">
+          <p class="pfooter">
                Increase the flow of customers and sales for your 
                business with digital marketing & growth solutions.
           </p>
