--- a/portfolio.html
+++ b/portfolio.html
@@ -18,15 +18,15 @@
 </head>
 
 
-<body class="bbody">
+<body class="bodyyy">
 
          <header>
 
                   <nav>
-                           <a class="logoo link" href="./index.html">
+                           <a class="logoone link" href="./index.html">
                                     Web <span class="logotwo"></span>Studio</span></a>
                            </a>
-                           <ul class="lisst">
+                           <ul class="list">
                                     <li>
                                              <a class="but link"   href="./index.html">
                                                       Studio
@@ -45,7 +45,7 @@
                            </ul>
                   </nav>
 
-                  <address class="addres">
+                  <address class="add">
                            <ul class="list">
                                     <li>
                                              <a class="addone link" href="mailto:info@devstudio.com">
@@ -68,27 +68,27 @@
                   <h1>
                            <ul>
                                     <li>
-                                    <button  class="but" type="button">
+                                    <button  class="butall" type="button">
                                              All
                                     </button>
                                     </li> 
                                     <li>
-                                    <button  class="but" type="button">
+                                    <button  class="butall" type="button">
                                              Web Site
                                     </button>
                                     </li>
                                     <li>
-                                    <button  class="but" type="button">
+                                    <button  class="butall" type="button">
                                              App
                                     </button>
                                     </li>
                                     <li>
-                                    <button  class="but" type="button">
+                                    <button  class="butall" type="button">
                                              Design
                                     </button>
                                     </li>
                                     <li>
-                                    <button  class="but" type="button">
+                                    <button  class="butall" type="button">
                                              Marketing
                                     </button>
                                     </li>
@@ -209,10 +209,10 @@
 
 <!-- Footer -->
 <footer class="footer">
-         <a class="footerlogoo link" href="./index.html">
+         <a class="footerlogoone link" href="./index.html">
                   Web<span class="footerlogotwo"> Studio</span>
          </a>
-         <p class="footer">
+         <p class="pfooter">
                   Increase the flow of customers and sales for your
                   business with digital marketing & growth solutions.
          </p>
