--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                
                </section>
                <!-- Benefits -->   
-               <section class="sectw">
+               <section class="sectwo">
                          <h2 hidden class="delete">Benefits</h2>
                     <ul class="list">
                          <li>
-                              <h3 class="htwosectwo>
+                              <h3 class="htwosectwo">
                                    Strategy
                               </h3>
                               <p class="psectwo">
@@ -203,7 +203,7 @@
           <a class="footerlogoo link" href="./index.html">
                Web <span class="footerlogotwo">Studio </span>
           </a>
-          <p class="pfooter">
+          <p class="ppfooter">
                Increase the flow of customers and sales for your 
                business with digital marketing & growth solutions.
           </p>
