home-work-2-ap2

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                   
                   <nav>
                          <a class="logoone link" href="./index.html">
-                              Web <span class="logotwo">Studio
+                              Web </a>
+                              <span class="logotwo"> Studio
                               </span>    
-                         </a>
+                         
                            <ul class="list">
                                     <li>
                                              <a class="but link"  href="./index.html">
@@ -110,7 +111,7 @@
                               <h3 class="htwosectwo">
                                    Technologies
                               </h3>
-                              <p class="psectwoo">
+                              <p class="psectwo">
                                    Design practice focused on digital experiences.
                                    We bring forth a deep passion for problem-solving.
                               </p>
