home-work-2-ap3

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
          <!-- Hero -->
          <section>
                   <h1>
-                           <ul>
+                           <ul class="list">
                                     <li>
                                     <button  class="butall" type="button">
                                              All
