--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                   
                   <nav>
                          <a class="logoone link" href="./index.html">
-                              Web </a>
+                              Web 
                               <span class="logotwo"> Studio
-                              </span>    
-                         
+                              </span>        
+                         </a>
+
                            <ul class="list">
                                     <li>
                                              <a class="but link"  href="./index.html">
