--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
          </main>
 
    /--!Footer --/
-<footer class="footer">
+<footer class="footerlogoone">
           <a class="footerlogoo link" href="./index.html">
                Web <span class="footerlogotwo">Studio </span>
           </a>
