--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
 <main>
          <!-- Hero -->
          <section>
-                  <h1 hidden>Menu
+                  <h1 hidden>Menu</h1>
                            <ul class="list">
                                     <li>
                                     <button  class="butall" type="button">
@@ -94,7 +94,7 @@
                                     </button>
                                     </li>
                            </ul>
-                  </h1>
+                  
 
 
          
