--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                               Effective Solutions
                               for Your Business
                          </h1>
-                         <button class="butone" type="button">
+                         <button class="button" type="button">
                          Order Service
                          </button>
 
