--- a/portfolio.html
+++ b/portfolio.html
@@ -106,9 +106,9 @@
                   <li>
                            <a class="link" href=""></a>
                            <img src="./images/img.jpg" alt="Фіолетові вікна" width=300 />
-                           <h3>
+                           <h2 class=liportfolio>
                                     Banking App Interface Concept
-                           </h3>
+                           </h2>
                            <p>
                                     App
                            </p>
@@ -117,9 +117,9 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (1).jpg" alt="Оплата" width=300 />
-                           <h3>
+                           <h2 class=liportfolio>
                                     Cashless Payment
-                           </h3>
+                           </h2>
                            <p>
                                     Marketing
                            </p>
@@ -139,9 +139,9 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (3).jpg" alt="Таксі" width=300 />
-                           <h3>
+                           <h2 class=liportfolio>
                                     Taxi Service
-                           </h3>
+                           </h2>
                            <p>
                                     Marketing
                            </p>
@@ -150,9 +150,9 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (8).jpg" alt="Телефон" width=300 />
-                           <h3>
+                           <h2 class=liportfolio>
                                     Screen Illustrations
-                           </h3>
+                           </h2>
                            <p>
                                     Design
                            </p>
@@ -161,9 +161,9 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (4).jpg" alt="Жінка онлайн" width=300 />
-                           <h3>
+                           <h2 class=liportfolio>
                            Online Courses
-                           </h3>
+                           </h2>
                            <p>
                            Marketing
                            </p>
@@ -172,9 +172,9 @@
                   <li>
                            <a class="link" href="">              
                            <img src="./images/img (5).jpg" alt="Жінки в інстаграм" width=300 />
-                           <h3>
+                           <h2 class=liportfolio>
                            Instagram Stories Concept
-                           </h3>
+                           </h2>
                            <p>
                            Design
                            </p>
@@ -183,9 +183,9 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (6).jpg" alt="Шопінг" width=300 />
-                  <h3>
+                           <h2 class=liportfolio>
                            Organic Food
-                  </h3>
+                           </h2>
                            <p>
                            Web Site
                            </p>
@@ -194,9 +194,9 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (7).jpg" alt="Капучино" width=300 />
-                           <h3>
+                           <h2 class=liportfolio>
                            Fresh Coffee
-                           </h3>
+                           </h2>
                            <p>
                            Web Site
                            </p>
