--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                               <img src="./images/staf4.jpg" 
                                    alt="Усміхнений чоловік темноволосий" 
                                    width=264 />
-                                   <h3>
+                                   <h3 class="hthreesecfour">
                                         Daniel Wilson
                                    </h3>
                                    <p class="psecfour">
@@ -202,8 +202,8 @@
 
    /--!Footer --/
 <footer class="footerlogoone">
-          <a class="footerlogoo link" href="./index.html">
-               Web <span class="footerlogotwo">Studio </span>
+          <a class="footerlogoone link" href="./index.html">
+               Web <span class="footerlogoone">Studio </span>
           </a>
           <p class="ppfooter">
                Increase the flow of customers and sales for your 
