--- a/portfolio.html
+++ b/portfolio.html
@@ -109,9 +109,9 @@
                            <h2 class=liportfolio>
                                     Banking App Interface Concept
                            </h2>
-                           <p>
+                                    <p class="pportfolio">
                                     App
-                           </p>
+                                    </p>
                            </a>
                   </li>
                   <li>
@@ -120,9 +120,9 @@
                            <h2 class=liportfolio>
                                     Cashless Payment
                            </h2>
-                           <p>
+                                    <p class="pportfolio">
                                     Marketing
-                           </p>
+                                    </p>
                            </a>
                   </li>
                   <li>
@@ -142,9 +142,9 @@
                            <h2 class=liportfolio>
                                     Taxi Service
                            </h2>
-                           <p>
+                                    <p class="pportfolio">
                                     Marketing
-                           </p>
+                                    </p>
                            </a>
                   </li>
                   <li>
@@ -153,9 +153,9 @@
                            <h2 class=liportfolio>
                                     Screen Illustrations
                            </h2>
-                           <p>
+                                    <p class="pportfolio">
                                     Design
-                           </p>
+                                    </p>
                            </a>
                   </li>
                   <li>
@@ -164,9 +164,9 @@
                            <h2 class=liportfolio>
                            Online Courses
                            </h2>
-                           <p>
-                           Marketing
-                           </p>
+                                    <p class="pportfolio">
+                                    Marketing
+                                    </p>
                            </a>
                   </li>
                   <li>
@@ -175,9 +175,9 @@
                            <h2 class=liportfolio>
                            Instagram Stories Concept
                            </h2>
-                           <p>
-                           Design
-                           </p>
+                                    <p class="pportfolio">
+                                    Design
+                                    </p>
                            </a>
                   </li>
                   <li>
@@ -186,9 +186,9 @@
                            <h2 class=liportfolio>
                            Organic Food
                            </h2>
-                           <p>
-                           Web Site
-                           </p>
+                                    <p class="pportfolio">
+                                    Web Site
+                                    </p>
                            </a>
                   </li>
                   <li>
@@ -197,9 +197,9 @@
                            <h2 class=liportfolio>
                            Fresh Coffee
                            </h2>
-                           <p>
-                           Web Site
-                           </p>
+                                    <p class="pportfolio">
+                                    Web Site
+                                    </p>
                            </a>
                   </li>
                   </ul>
