--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
                   <li>
                            <a class="link" href=""></a>
                            <img src="./images/img.jpg" alt="Фіолетові вікна" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                                     Banking App Interface Concept
                            </h2>
                                     <p class="pportfolio">
@@ -117,7 +117,7 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (1).jpg" alt="Оплата" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                                     Cashless Payment
                            </h2>
                                     <p class="pportfolio">
@@ -139,7 +139,7 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (3).jpg" alt="Таксі" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                                     Taxi Service
                            </h2>
                                     <p class="pportfolio">
@@ -150,7 +150,7 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (8).jpg" alt="Телефон" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                                     Screen Illustrations
                            </h2>
                                     <p class="pportfolio">
@@ -161,7 +161,7 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (4).jpg" alt="Жінка онлайн" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                            Online Courses
                            </h2>
                                     <p class="pportfolio">
@@ -172,7 +172,7 @@
                   <li>
                            <a class="link" href="">              
                            <img src="./images/img (5).jpg" alt="Жінки в інстаграм" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                            Instagram Stories Concept
                            </h2>
                                     <p class="pportfolio">
@@ -183,7 +183,7 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (6).jpg" alt="Шопінг" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                            Organic Food
                            </h2>
                                     <p class="pportfolio">
@@ -194,7 +194,7 @@
                   <li>
                            <a class="link" href="">
                            <img src="./images/img (7).jpg" alt="Капучино" width=300 />
-                           <h2 class=liportfolio>
+                           <h2 class="liportfolio">
                            Fresh Coffee
                            </h2>
                                     <p class="pportfolio">
