--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img (1).jpg" alt="Оплата" width=300 />
+                           <img class="imgp" src="./images/img1.jpg" alt="Оплата" width=300 />
                            <h2 class="liportfolio">
                                     Cashless Payment
                            </h2>
@@ -138,7 +138,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img (3).jpg" alt="Таксі" width=300 />
+                           <img class="imgp" src="./images/img3.jpg" alt="Таксі" width=300 />
                            <h2 class="liportfolio">
                                     Taxi Service
                            </h2>
@@ -149,7 +149,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img (8).jpg" alt="Телефон" width=300 />
+                           <img class="imgp" src="./images/img8.jpg" alt="Телефон" width=300 />
                            <h2 class="liportfolio">
                                     Screen Illustrations
                            </h2>
@@ -160,7 +160,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" class="imgp" src="./images/img (4).jpg" alt="Жінка онлайн" width=300 />
+                           <img class="imgp" class="imgp" src="./images/img4.jpg" alt="Жінка онлайн" width=300 />
                            <h2 class="liportfolio">
                            Online Courses
                            </h2>
@@ -171,7 +171,7 @@
                   </li>
                   <li>
                            <a class="link" href="">              
-                           <img class="imgp" src="./images/img (5).jpg" alt="Жінки в інстаграм" width=300 />
+                           <img class="imgp" src="./images/img5.jpg" alt="Жінки в інстаграм" width=300 />
                            <h2 class="liportfolio">
                            Instagram Stories Concept
                            </h2>
@@ -182,7 +182,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img (6).jpg" alt="Шопінг" width=300 />
+                           <img class="imgp" src="./images/img6.jpg" alt="Шопінг" width=300 />
                            <h2 class="liportfolio">
                            Organic Food
                            </h2>
@@ -193,7 +193,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img (7).jpg" alt="Капучино" width=300 />
+                           <img class="imgp" src="./images/img7.jpg" alt="Капучино" width=300 />
                            <h2 class="liportfolio">
                            Fresh Coffee
                            </h2>
