--- a/portfolio.html
+++ b/portfolio.html
@@ -104,8 +104,8 @@
                   <ul class="list">
                   
                   <li>
-                           <a class="link" href=""></a>
-                           <img class="imgp" src="./images/img.jpg" alt="Фіолетові вікна" width=300 />
+                           <a class="link" href="">
+                           <img class="imgp" src="./images/img0.jpg" alt="violet windows" width=300 />
                            <h2 class="liportfolio">
                                     Banking App Interface Concept
                            </h2>
@@ -116,7 +116,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img1.jpg" alt="Оплата" width=300 />
+                           <img class="imgp" src="./images/img1.jpg" alt="paymentpay" width=300 />
                            <h2 class="liportfolio">
                                     Cashless Payment
                            </h2>
@@ -124,21 +124,22 @@
                                     Marketing
                                     </p>
                            </a>
+                           
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img src="./images/img (2).jpg" alt="Медитація" width=300 />
-                           <h3>
+                           <img class="imgp" src="./images/img2.jpg" alt="Meditation" width=300 />
+                           <h2 class="liportfolio">
                                     Meditation App
-                           </h3>
-                           <p>
+                           </h2>
+                           <p class="pportfolio">
                                     App
                            </p>
                            </a>
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img3.jpg" alt="Таксі" width=300 />
+                           <img class="imgp" src="./images/img3.jpg" alt="taxi" width=300 />
                            <h2 class="liportfolio">
                                     Taxi Service
                            </h2>
@@ -149,7 +150,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img8.jpg" alt="Телефон" width=300 />
+                           <img class="imgp" src="./images/img8.jpg" alt="phone" width=300 />
                            <h2 class="liportfolio">
                                     Screen Illustrations
                            </h2>
@@ -160,7 +161,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" class="imgp" src="./images/img4.jpg" alt="Жінка онлайн" width=300 />
+                           <img class="imgp" class="imgp" src="./images/img4.jpg" alt="goodlady" width=300 />
                            <h2 class="liportfolio">
                            Online Courses
                            </h2>
@@ -171,7 +172,7 @@
                   </li>
                   <li>
                            <a class="link" href="">              
-                           <img class="imgp" src="./images/img5.jpg" alt="Жінки в інстаграм" width=300 />
+                           <img class="imgp" src="./images/img5.jpg" alt="ladysandinstagram" width=300 />
                            <h2 class="liportfolio">
                            Instagram Stories Concept
                            </h2>
@@ -182,7 +183,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img6.jpg" alt="Шопінг" width=300 />
+                           <img class="imgp" src="./images/img6.jpg" alt="shoping" width=300 />
                            <h2 class="liportfolio">
                            Organic Food
                            </h2>
@@ -193,7 +194,7 @@
                   </li>
                   <li>
                            <a class="link" href="">
-                           <img class="imgp" src="./images/img7.jpg" alt="Капучино" width=300 />
+                           <img class="imgp" src="./images/img7.jpg" alt="coffee" width=300 />
                            <h2 class="liportfolio">
                            Fresh Coffee
                            </h2>
