--- a/portfolio.html
+++ b/portfolio.html
@@ -209,12 +209,11 @@
 
 
 <!-- Footer -->
-<footer class="footer">
+<footer class="footerlogoone">
          <a class="footerlogoone link" href="./index.html">
-                  Web
-                  <span class="footerlogotwo"> Studio</span>
+                  Web <span class="secfour">Studio </span>
          </a>
-         <p class="pfooter">
+         <p class="ppfooter">
                   Increase the flow of customers and sales for your
                   business with digital marketing & growth solutions.
          </p>
