--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
    /--!Footer --/
 <footer class="footerlogoone">
           <a class="footerlogoone link" href="./index.html">
-               Web <span class="secfour">Studio </span>
+               Web <span class="ppfooter">Studio </span>
           </a>
           <p class="ppfooter">
                Increase the flow of customers and sales for your 
