--- a/portfolio.html
+++ b/portfolio.html
@@ -32,17 +32,17 @@
                         <ul class="list">
                                 <li>
                                         <a class="but link" href="./index.html">
-                                                Studio↩
+                                                Studio
                                         </a>
                                 </li>
                                 <li>
                                         <a class="but link" href="./portfolio.html">
-                                                Portfolio↩
+                                                Portfolio
                                         </a>
                                 </li>
                                 <li>
                                         <a class="but link" href="">
-                                                Contacts↩
+                                                Contacts
                                         </a>
                                 </li>
                         </ul>
@@ -193,10 +193,10 @@
                                                 </h2>
                                                 <p class="pportfolio">
                                                         Web Site
-                                                </p>↩
-                                        </a>↩
-                                </li>↩
-                                <li>↩
+                                                </p>
+                                        </a>
+                                </li>
+                                <li>
                                         <a class="link" href="">
                                                 <img class="imgp" src="./images/img7.jpg" alt="coffee" width=300>
                                                 <h2 class="liportfolio">
@@ -216,10 +216,10 @@
         <footer class="footerlogoone">
                 <a class="footerlogoone link" href="./index.html">
                         Web <span class="ppfooter">Studio</span>
-                </a>↩
-                <p class="ppfooter">↩
-                        Increase the flow of customers and sales for your↩
-                        business with digital marketing & growth solutions.↩
+                </a>
+                <p class="ppfooter">
+                        Increase the flow of customers and sales for your
+                        business with digital marketing & growth solutions.
                 </p>
         </footer>
 </body>
