--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <nav>
                          <a class="logoone link" href="./index.html">
                               Web 
-                              <span class="logotwo"> Studio
+                              <span class="logotwo">Studio
                               </span>
                          </a>
 
@@ -66,8 +66,8 @@
 
          <main>
                <!-- Hero -->
-               <section class="secone">
-                         <h1 class="hsecone">
+               <section class="hero">
+                         <h1 class="hhero">
                               Effective Solutions
                               for Your Business
                          </h1>
@@ -78,41 +78,41 @@
                
                </section>
                <!-- Benefits -->   
-               <section class="sectwo">
+               <section class="benefits">
                          <h2 hidden class="delete">Benefits</h2>
                     <ul class="list">
                          <li>
-                              <h3 class="htwosectwo">
+                              <h3 class="hbenefits">
                                    Strategy
                               </h3>
-                              <p class="psectwo">
+                              <p class="text">
                                    Our goal is to identify the business
                                    problem to walk away with the perfect and creative solution.
                               </p>
                          </li>
                          <li>
-                              <h3 class="htwosectwo">
+                              <h3 class="hbenefits">
                                    Punctuality
                               </h3>
-                              <p class="psectwo">
+                              <p class="text">
                                    Bring the key message to the brand's audience for the best 
                                    price within the shortest possible time.
                               </p>
                          </li>
                          <li>
-                              <h3 class="htwosectwo">
+                              <h3 class="hbenefits">
                                    Diligence
                               </h3>
-                              <p class="psectwo">
+                              <p class="text">
                                    Research and confirm brands that present the strongest 
                                    digital growth opportunities and minimize risk.
                               </p>
                          </li>
                          <li>
-                              <h3 class="htwosectwo">
+                              <h3 class="hbenefits">
                                    Technologies
                               </h3>
-                              <p class="psectwo">
+                              <p class="text">
                                    Design practice focused on digital experiences.
                                    We bring forth a deep passion for problem-solving.
                               </p>
@@ -120,8 +120,8 @@
                     </ul>
                </section>
                     <!-- What are we doing -->
-               <section class="secthree">
-                    <h2 class="htwosecthree">
+               <section class="doing">
+                    <h2 class="hdoing">
                          What are we doing
                     </h2>
 
@@ -144,54 +144,54 @@
                     </ul>
                </section>
                <!-- Our Team -->
-               <section class="secfour">
-                    <h2 class="htwosecfour">
+               <section class="team">
+                    <h2 class="hteam">
                          Our Team
                     </h2>
                     <ul class="list">
                          
 
-                         <li class="lisecfour">
+                         <li class="listteam">
                               <img src="./images/staf1.jpg"
                                    alt="Бородач" 
                                    width=264 />
-                                   <h3  class="hthreesecfour">
+                                   <h3  class="htextteam">
                                         Mark Guerrero
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="textteam">
                                         Product Designer
                                    </p>
                          </li>
-                         <li class="lisecfour">
+                         <li class="listteam">
                               <img src="./images/staf2.jpg" 
                                    alt="Усміхнений чоловік" 
                                    width=264 />
-                                   <h3  class="hthreesecfour">
+                                   <h3  class="htextteam">
                                         Tom Ford
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="textteam">
                                         Frontend Developer
                                    </p>
                          </li>
-                         <li class="lisecfour">
+                         <li class="listteam">
                               <img src="./images/staf3.jpg" 
                                    alt="Чорноволоса жінка" 
                                    width=264 />
-                                   <h3  class="hthreesecfour">
+                                   <h3  class="htextteam">
                                         Camila Garcia
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="textteam">
                                         Marketing
                                    </p>
                          </li>
-                         <li class="lisecfour">
+                         <li class="listteam">
                               <img src="./images/staf4.jpg" 
                                    alt="Усміхнений чоловік темноволосий" 
                                    width=264 />
-                                   <h3 class="hthreesecfour">
+                                   <h3 class="htextteam">
                                         Daniel Wilson
                                    </h3>
-                                   <p class="psecfour">
+                                   <p class="textteam">
                                         UI Designer
                                    </p>
                          </li>
@@ -200,12 +200,12 @@
 
          </main>
 
-   /--!Footer --/
+<!-- Footer -->
 <footer class="footerlogoone">
           <a class="footerlogoone link" href="./index.html">
-               Web <span class="ppfooter">Studio</span>
+               Web<span class="ppfooter">Studio</span>
           </a>
-          <p class="ppfooter">
+          <p class="pportfolio">
                Increase the flow of customers and sales for your 
                business with digital marketing & growth solutions.
           </p>
