--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,6 @@
         <meta name="viewport" content="width=, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="portfolio.html">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -108,7 +107,7 @@
                                 <li>
                                         <a class="link" href="">
                                                 <img class="imgp" src="./images/img0.jpg" alt="violet windows"
-                                                        width=300>
+                                                        width=360>
                                                 <h2 class="liportfolio">
                                                         Banking App Interface Concept
                                                 </h2>
@@ -119,7 +118,7 @@
                                 </li>
                                 <li>
                                         <a class="link" href="">
-                                                <img class="imgp" src="./images/img1.jpg" alt="paymentpay" width=300>
+                                                <img class="imgp" src="./images/img1.jpg" alt="paymentpay" width=360>
                                                 <h2 class="liportfolio">
                                                         Cashless Payment
                                                 </h2>
@@ -131,7 +130,7 @@
                                 </li>
                                 <li>
                                         <a class="link" href="">
-                                                <img class="imgp" src="./images/img2.jpg" alt="Meditation" width=300>↩
+                                                <img class="imgp" src="./images/img2.jpg" alt="Meditation" width=360>↩
                                                 <h2 class="liportfolio">
                                                         Meditation App
                                                 </h2>
@@ -142,7 +141,7 @@
                                 </li>
                                 <li>
                                         <a class="link" href="">
-                                                <img class="imgp" src="./images/img3.jpg" alt="taxi" width=300>
+                                                <img class="imgp" src="./images/img3.jpg" alt="taxi" width=360>
                                                 <h2 class="liportfolio">
                                                         Taxi Service
                                                 </h2>
@@ -153,7 +152,7 @@
                                 </li>
                                 <li>
                                         <a class="link" href="">
-                                                <img class="imgp" src="./images/img8.jpg" alt="phone" width=300>
+                                                <img class="imgp" src="./images/img8.jpg" alt="phone" width=360>
                                                 <h2 class="liportfolio">
                                                         Screen Illustrations
                                                 </h2>
@@ -164,7 +163,7 @@
                                 </li>
                                 <li>
                                         <a class="link" href="">
-                                                <img class="imgp" src="./images/img4.jpg" alt="goodlady" width=300>
+                                                <img class="imgp" src="./images/img4.jpg" alt="goodlady" width=360>
                                                 <h2 class="liportfolio">
                                                         Online Courses
                                                 </h2>
@@ -176,7 +175,7 @@
                                 <li>
                                         <a class="link" href=""> 
                                                 <img class="imgp" src="./images/img5.jpg" alt="ladysandinstagram"
-                                                        width=300>
+                                                        width=360>
                                                 <h2 class="liportfolio">
                                                         Instagram Stories Concept
                                                 </h2>
@@ -187,7 +186,7 @@
                                 </li>
                                 <li>
                                         <a class="link" href="">
-                                                <img class="imgp" src="./images/img6.jpg" alt="shoping" width=300>
+                                                <img class="imgp" src="./images/img6.jpg" alt="shoping" width=360>
                                                 <h2 class="liportfolio">
                                                         Organic Food
                                                 </h2>
@@ -198,7 +197,7 @@
                                 </li>
                                 <li>
                                         <a class="link" href="">
-                                                <img class="imgp" src="./images/img7.jpg" alt="coffee" width=300>
+                                                <img class="imgp" src="./images/img7.jpg" alt="coffee" width=360>
                                                 <h2 class="liportfolio">
                                                         Fresh Coffee
                                                 </h2>
@@ -215,9 +214,9 @@
         <!-- Footer -->
         <footer class="footerlogoone">
                 <a class="footerlogoone link" href="./index.html">
-                        Web <span class="ppfooter">Studio</span>
+                        Web<span class="ppfooter">Studio</span>
                 </a>
-                <p class="ppfooter">
+                <p class="pportfolio">
                         Increase the flow of customers and sales for your
                         business with digital marketing & growth solutions.
                 </p>
