--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
                   
                   <nav>
                          <a class="logoone link" href="./index.html">
-                              Web 
-                              <span class="logotwo">Studio
-                              </span>
+                              Web<span class="logotwo">Studio</span>
                          </a>
-
+ 
                            <ul class="list">
                                     <li>
                                              <a class="but link"  href="./index.html">
@@ -201,7 +199,7 @@
          </main>
 
 <!-- Footer -->
-<footer class="footerlogoone">
+<footer class="footer">
           <a class="footerlogoone link" href="./index.html">
                Web<span class="ppfooter">Studio</span>
           </a>
