--- a/portfolio.html
+++ b/portfolio.html
@@ -216,7 +216,7 @@
                 <a class="footerlogoone link" href="./index.html">
                         Web<span class="ppfooter">Studio</span>
                 </a>
-                <p class="pportfolio">
+                <p class="ppfooter">
                         Increase the flow of customers and sales for your
                         business with digital marketing & growth solutions.
                 </p>
